ready for submission

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="title-logo" src="http://placehold.it/100x100" alt="Udacity logo">
+                    <img class="title-logo" src="image/udacity logo.png" alt="Udacity logo" height="120" width="110">
                 </div>
                 <div class="col-md-6 text-uppercase text-right">
                     <h1 class="title-super text-thin">Xinwei Liu</h1>
@@ -29,7 +29,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <img class="img-responsive" src="http://placehold.it/1140x350" alt="Main puppy img!">
+                    <img class="img-responsive" src="Image/profile pic.jpg" alt="Profile Picture">
                 </div>
             </div>
             <div class="row">
@@ -39,18 +39,18 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                    <img class="img-responsive" src="http://placehold.it/555x300" alt="puppy A" data-toggle="modal" data-target="#project1">
+                    <img class="img-responsive" src="image/books.jpg" alt="books" data-toggle="modal" data-target="#project1">
                     <h3 class="text-uppercase">Let's Learn!</h3>
                     <p><a href="http://github.com">Link to project</a></p>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-responsive" src="http://placehold.it/555x300" alt="puppy B" data-toggle="modal" data-target="#project2">
-                    <h3 class="text-uppercase">Let's Talk!</h3>
+                    <img class="img-responsive" src="image/ukulele.jpg" alt="ukulele" data-toggle="modal" data-target="#project2">
+                    <h3 class="text-uppercase">Let's Sing!</h3>
                     <p><a href="http://github.com">Link to project</a></p>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-responsive" src="http://placehold.it/555x300" alt="puppy C" data-toggle="modal" data-target="#project3">
-                    <h3 class="text-uppercase">Let's Play!</h3>
+                    <img class="img-responsive" src="image/ice cream.jpg" alt="ice cream" data-toggle="modal" data-target="#project3">
+                    <h3 class="text-uppercase">Let's eat!</h3>
                     <p><a href="http://github.com">Link to project</a></p>
                 </div>
             </div>           
@@ -61,10 +61,10 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel1">Favorite App Page</h4>
+                <h4 class="modal-title" id="myModalLabel1">Let's Learn!</h4>
               </div>
               <div class="modal-body">
-                <img class="img-responsive" src="images/555.jpeg" alt="p1 image">
+                <img class="img-responsive small-pic" src="image/books.jpg" alt="p1 image">
                 This was my first project in this class. I learned a lot about HTML and CSS.
               </div>
               <div class="modal-footer">
@@ -79,10 +79,10 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel2">Favorite App Page</h4>
+                <h4 class="modal-title" id="myModalLabel2">Let's Sing!</h4>
               </div>
               <div class="modal-body">
-                <img class="img-responsive" src="images/555.jpeg" alt="p2 image">
+                <img class="img-responsive small-pic" src="image/ukulele.jpg" alt="p2 image">
                 This was my first project in this class. I learned a lot about HTML and CSS.
               </div>
               <div class="modal-footer">
@@ -97,10 +97,10 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel3">Favorite App Page</h4>
+                <h4 class="modal-title" id="myModalLabel3">Let's Eat!</h4>
               </div>
               <div class="modal-body">
-                <img class="img-responsive" src="images/555.jpeg" alt="p3 image">
+                <img class="img-responsive small-pic" src="image/ice cream.jpg" alt="p3 image">
                 This was my first project in this class. I learned a lot about HTML and CSS.
               </div>
               <div class="modal-footer">
